# multibot_ros2_interface

./: CMakeLists.txt  README.md  package.xml
msg/: LocalPath.msg  RobotConfig.msg  RobotStateArray.msg
srv/: RobotConfigs.srv  RobotInfo.srv
